--- a/themes/raiser/sass/layouts/_campaign.scss
+++ b/themes/raiser/sass/layouts/_campaign.scss
@@ -117,6 +117,7 @@
   }
 
   // Progress widget
+  #block-bean-campaign-page-progress-query-con,
   #block-bean-campaign-page-progress,
   #block-bean-campaign-progress {
     background: $primary-widget;
