Remove space from the banner context

--- a/themes/raiser/css/styles.css
+++ b/themes/raiser/css/styles.css
@@ -1769,17 +1769,21 @@ body.front #main #content {
     max-height: 300px;
   }
 }
-/* line 12, ../sass/components/_campaign_banner.scss */
+/* line 10, ../sass/components/_campaign_banner.scss */
+.page-redhen-campaign #highlighted #block-bean-campaign-context-banner {
+  margin-bottom: 0;
+}
+/* line 15, ../sass/components/_campaign_banner.scss */
 .page-redhen-campaign #highlighted #block-bean-campaign-page-banner,
 .page-redhen-campaign #highlighted #block-bean-campaign-banner {
   margin-bottom: 0;
 }
-/* line 14, ../sass/components/_campaign_banner.scss */
+/* line 17, ../sass/components/_campaign_banner.scss */
 .page-redhen-campaign #highlighted #block-bean-campaign-page-banner img,
 .page-redhen-campaign #highlighted #block-bean-campaign-banner img {
   width: 100%;
 }
-/* line 21, ../sass/components/_campaign_banner.scss */
+/* line 24, ../sass/components/_campaign_banner.scss */
 .page-redhen-campaign #highlighted .redhen_campaign_title,
 .page-redhen-campaign #highlighted .redhen-campaign-general h2,
 .page-redhen-campaign #highlighted .redhen_campaign_page_campaign {
@@ -1794,14 +1798,14 @@ body.front #main #content {
   top: 2em;
   z-index: 3;
 }
-/* line 33, ../sass/components/_campaign_banner.scss */
+/* line 36, ../sass/components/_campaign_banner.scss */
 .page-redhen-campaign #highlighted .redhen_campaign_title a,
 .page-redhen-campaign #highlighted .redhen-campaign-general h2 a,
 .page-redhen-campaign #highlighted .redhen_campaign_page_campaign a {
   color: white;
 }
 @media (min-width: 768px) {
-  /* line 21, ../sass/components/_campaign_banner.scss */
+  /* line 24, ../sass/components/_campaign_banner.scss */
   .page-redhen-campaign #highlighted .redhen_campaign_title,
   .page-redhen-campaign #highlighted .redhen-campaign-general h2,
   .page-redhen-campaign #highlighted .redhen_campaign_page_campaign {
@@ -1809,7 +1813,7 @@ body.front #main #content {
   }
 }
 @media (min-width: 992px) {
-  /* line 21, ../sass/components/_campaign_banner.scss */
+  /* line 24, ../sass/components/_campaign_banner.scss */
   .page-redhen-campaign #highlighted .redhen_campaign_title,
   .page-redhen-campaign #highlighted .redhen-campaign-general h2,
   .page-redhen-campaign #highlighted .redhen_campaign_page_campaign {
@@ -1817,24 +1821,24 @@ body.front #main #content {
     top: 5em;
   }
 }
-/* line 45, ../sass/components/_campaign_banner.scss */
+/* line 48, ../sass/components/_campaign_banner.scss */
 .page-redhen-campaign #highlighted .redhen-campaign-general h2 {
   top: 4em;
   max-width: 38%;
   line-height: 1.125em;
 }
-/* line 51, ../sass/components/_campaign_banner.scss */
+/* line 54, ../sass/components/_campaign_banner.scss */
 .page-redhen-campaign #highlighted h2 {
   display: none;
 }
-/* line 55, ../sass/components/_campaign_banner.scss */
+/* line 58, ../sass/components/_campaign_banner.scss */
 .page-redhen-campaign #highlighted .field-name-field-teaser {
   margin-bottom: 1em;
   max-width: none;
   padding: 1em;
 }
 @media (min-width: 768px) {
-  /* line 55, ../sass/components/_campaign_banner.scss */
+  /* line 58, ../sass/components/_campaign_banner.scss */
   .page-redhen-campaign #highlighted .field-name-field-teaser {
     background: rgba(0, 0, 0, 0.6);
     color: white;
@@ -1844,7 +1848,7 @@ body.front #main #content {
   }
 }
 @media (min-width: 992px) {
-  /* line 55, ../sass/components/_campaign_banner.scss */
+  /* line 58, ../sass/components/_campaign_banner.scss */
   .page-redhen-campaign #highlighted .field-name-field-teaser {
     background: rgba(0, 0, 0, 0.6);
     bottom: 0;
@@ -1857,17 +1861,17 @@ body.front #main #content {
     margin-bottom: 0;
     max-width: 60%;
   }
-  /* line 80, ../sass/components/_campaign_banner.scss */
+  /* line 83, ../sass/components/_campaign_banner.scss */
   .page-redhen-campaign #highlighted .field-name-field-teaser .field-item {
     margin-top: 3em;
   }
 }
-/* line 88, ../sass/components/_campaign_banner.scss */
+/* line 91, ../sass/components/_campaign_banner.scss */
 .page-redhen-campaign #highlighted .redhen_campaign_page_donate,
 .page-redhen-campaign #highlighted .field-type-redhen-donation {
   padding: 1em;
 }
-/* line 91, ../sass/components/_campaign_banner.scss */
+/* line 94, ../sass/components/_campaign_banner.scss */
 .page-redhen-campaign #highlighted .redhen_campaign_page_donate a,
 .page-redhen-campaign #highlighted .field-type-redhen-donation a {
   background: none;
@@ -1900,7 +1904,7 @@ body.front #main #content {
   background: #ffab30;
 }
 @media (min-width: 992px) {
-  /* line 88, ../sass/components/_campaign_banner.scss */
+  /* line 91, ../sass/components/_campaign_banner.scss */
   .page-redhen-campaign #highlighted .redhen_campaign_page_donate,
   .page-redhen-campaign #highlighted .field-type-redhen-donation {
     bottom: 2em;
@@ -1910,7 +1914,7 @@ body.front #main #content {
     width: auto;
     z-index: 2;
   }
-  /* line 106, ../sass/components/_campaign_banner.scss */
+  /* line 109, ../sass/components/_campaign_banner.scss */
   .page-redhen-campaign #highlighted .redhen_campaign_page_donate a,
   .page-redhen-campaign #highlighted .field-type-redhen-donation a {
     margin-bottom: 0;
@@ -3974,7 +3978,7 @@ tr.selected td {
 /* line 808, ../sass/components/_misc.scss */
 .progress .filled {
   background-color: #0072b9;
-  background-image: url('../images/progress.gif?1416012803');
+  background-image: url('../images/progress.gif?1416514438');
 }
 
 /* line 1, ../sass/components/_modal.scss */
