--- a/themes/raiser/sass/components/_campaign_banner.scss
+++ b/themes/raiser/sass/components/_campaign_banner.scss
@@ -7,6 +7,9 @@
     max-height: 300px;
   }
 
+  #block-bean-campaign-context-banner {
+    margin-bottom: 0; 
+  }
 
   #block-bean-campaign-page-banner,
   #block-bean-campaign-banner {
