Apply campaign banner styles to donation page

--- a/themes/raiser/sass/components/_campaign_banner.scss
+++ b/themes/raiser/sass/components/_campaign_banner.scss
@@ -8,10 +8,11 @@
   }
 
   #block-bean-campaign-context-banner {
-    margin-bottom: 0; 
+    margin-bottom: 0;
   }
 
   #block-bean-campaign-page-banner,
+  #block-bean-campaign-context-banner,
   #block-bean-campaign-banner {
     margin-bottom: 0;
     img {
